[tool.poetry]
name = "llm-server-benchmark"
version = "0.1.0"
description = ""
authors = ["Or Levi <orlevi128@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.35.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
